--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
 before_install:
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
+  - go get golang.org/x/sys/unix
 
 install:
   - go get github.com/lib/pq
